Updated tier list

--- a/tier/index.html
+++ b/tier/index.html
@@ -38,7 +38,8 @@ font-family: 'PT Sans Narrow', sans-serif;
 color: black;
 }
 </style>
-</head><body>
+</head>
+<body>
 <br>
 <div style="text-align: center;">
 <h1>Sm4sh Wii U Tier List</h1>
@@ -46,9 +47,17 @@ color: black;
 <h2>Created by <a href="http://contactup.io/upbqueen/" target="_blank">Up B Queen</a>.</h2>
 <br>
 <br>
-Last update: 7/7/2015<br>
+Last update: 7/8/2015<br>
 Please note this list is <span style="font-weight: bold;">without
 customs</span>.<br>
+<span style="font-weight: bold; background-color: rgb(255, 255, 0);">NEW:</span>
+Jump to
+a character by adding #character_name to the end of the URL. Use the
+character's full name in all lower case without punctuation (if any).
+If you share a link like this anyone who views the link will also jump
+to that character.<br>
+<span style="font-family: monospace; background-color: rgb(211, 211, 211);">e.g. #mrgameandwatch
+#kingdedede #darkpit #zerosuitsamus #palutena etc.</span><br>
 <br>
 <table style="width: 80%; text-align: left; margin-left: auto; margin-right: auto;" class="table table-striped" border="0" cellpadding="2" cellspacing="2">
 <tbody>
@@ -58,8 +67,8 @@ customs</span>.<br>
 <table style="text-align: left; width: 100%; height: 100%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td><img style="width: 50px; height: 50px;" alt="Sheik" title="Bouncing Fish" src="img/bouncingfish.png" align="middle">Sheik
-&nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Rosalina and Luma" title="Rosalina and Luma" src="img/luma.png" align="middle">Rosalina and Luma
+<td><a name="sheik"></a><img style="width: 50px; height: 50px;" alt="Sheik" title="Bouncing Fish" src="img/bouncingfish.png" align="middle">Sheik
+&nbsp; &nbsp;<a name="rosalina"></a><img style="width: 50px; height: 50px;" alt="Rosalina and Luma" title="Rosalina and Luma" src="img/luma.png" align="middle">Rosalina and Luma
 &nbsp; &nbsp;</td>
 </tr>
 </tbody>
@@ -73,22 +82,22 @@ customs</span>.<br>
 <tbody>
 <tr>
 <td style="text-align: center;">A+</td>
-<td><img style="width: 50px; height: 50px;" alt="Lucas" title="PK FREEEEEZE!" src="img/lucas.png" align="middle">Lucas &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Zero Suit Samus" title="&lt;3" src="img/waifu.png" align="middle">Zero
-Suit Samus &nbsp; <img style="width: 50px; height: 50px;" alt="Luigi" title="Bang bang!" src="img/luigi.png" align="middle">Luigi
-&nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Sonic" title="2fest4u" src="img/sanic.png" align="middle">Sonic &nbsp; <img style="width: 50px; height: 50px;" alt="Ness" title="OKAY." src="img/okay.png" align="middle">Ness</td>
+<td><a name="lucas"></a><img style="width: 50px; height: 50px;" alt="Lucas" title="PK FREEEEEZE!" src="img/lucas.png" align="middle">Lucas &nbsp; &nbsp;<a name="zerosuitsamus"></a><img style="width: 50px; height: 50px;" alt="Zero Suit Samus" title="&lt;3" src="img/waifu.png" align="middle">Zero
+Suit Samus &nbsp; <a name="luigi"></a><img style="width: 50px; height: 50px;" alt="Luigi" title="Bang bang!" src="img/luigi.png" align="middle">Luigi
+&nbsp; &nbsp;<a name="sonic"></a><img style="width: 50px; height: 50px;" alt="Sonic" title="2fest4u" src="img/sanic.png" align="middle">Sonic &nbsp; <a name="ness"></a><img style="width: 50px; height: 50px;" alt="Ness" title="OKAY." src="img/okay.png" align="middle">Ness</td>
 </tr>
 <tr>
 <td style="text-align: center;">A</td>
-<td><img style="width: 50px; height: 50px;" alt="Pikachu" title="STRONG INDEPENDENT PIKACHU" src="img/pichu.png" align="middle">Pikachu &nbsp;
-<img style="width: 50px; height: 50px;" alt="Diddy Kong" title="hoohah" src="img/diddykong.png" align="middle">Diddy Kong &nbsp; <img style="width: 50px; height: 50px;" alt="Fox" title="UYWUYGGGHHHHHAAIIIGGHHH" src="img/fox.png" align="middle">Fox &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Yoshi" title="*cues classical music*" src="img/yoshi.png" align="middle">Yoshi &nbsp; <img style="width: 50px; height: 50px;" alt="Toon Link" title="Something witty" src="img/toonlonk.png" align="middle">Toon Link</td>
+<td><a name="pikachu"></a><img style="width: 50px; height: 50px;" alt="Pikachu" title="STRONG INDEPENDENT PIKACHU" src="img/pichu.png" align="middle">Pikachu &nbsp;
+<a name="diddykong"></a><img style="width: 50px; height: 50px;" alt="Diddy Kong" title="hoohah" src="img/diddykong.png" align="middle">Diddy Kong &nbsp; <a name="fox"></a><img style="width: 50px; height: 50px;" alt="Fox" title="UYWUYGGGHHHHHAAIIIGGHHH" src="img/fox.png" align="middle">Fox &nbsp; &nbsp;<a name="yoshi"></a><img style="width: 50px; height: 50px;" alt="Yoshi" title="*cues classical music*" src="img/yoshi.png" align="middle">Yoshi &nbsp; <a name="toonlink"></a><img style="width: 50px; height: 50px;" alt="Toon Link" title="Something witty" src="img/toonlonk.png" align="middle">Toon Link</td>
 </tr>
 <tr>
 <td style="text-align: center;">A-</td>
-<td><img style="width: 50px; height: 50px;" alt="Link" title="I'm Lonk from Pennsylvania." src="img/lonk.png" align="middle">Link &nbsp;
-&nbsp;<img style="width: 50px; height: 50px;" alt="Olimar" title="Olimar" src="img/alph.png" align="middle">Olimar
-&nbsp; <img style="width: 50px; height: 50px;" alt="Falcon (the bird)" title="Not worth the trouble" src="img/falcon.png" align="middle">Falcon &nbsp;
-<img style="width: 50px; height: 50px;" alt="Jigglypuff" title="Rest-o-matic 5000" src="img/demjiggles.png" align="middle">Jigglypuff
-&nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Villager" title="*stare*" src="img/villager.png" align="middle">Villager &nbsp;&nbsp;</td>
+<td><a name="link"></a><img style="width: 50px; height: 50px;" alt="Link" title="I'm Lonk from Pennsylvania." src="img/lonk.png" align="middle">Link &nbsp;
+&nbsp;<a name="olimar"></a><img style="width: 50px; height: 50px;" alt="Olimar" title="Olimar" src="img/alph.png" align="middle">Olimar
+&nbsp; <a name="falco"></a><img style="width: 50px; height: 50px;" alt="Falcon (the bird)" title="Not worth the trouble" src="img/falcon.png" align="middle">Falco &nbsp;
+<a name="jigglypuff"></a><img style="width: 50px; height: 50px;" alt="Jigglypuff" title="Rest-o-matic 5000" src="img/demjiggles.png" align="middle">Jigglypuff
+&nbsp; &nbsp;<a name="villager"></a><img style="width: 50px; height: 50px;" alt="Villager" title="*stare*" src="img/villager.png" align="middle">Villager &nbsp;&nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -101,23 +110,23 @@ Suit Samus &nbsp; <img style="width: 50px; height: 50px;" alt="Luigi" title="Ban
 <tbody>
 <tr>
 <td style="text-align: center;">B+</td>
-<td><img style="width: 50px; height: 50px;" alt="Wii Fit Trainer" title="Let's STEP UP THE INTENSITY." src="img/intensity.png" align="middle">Wii Fit
-Trainer &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Ryu" title="HADOUKEN!" src="img/ryu.png" align="middle">Ryu &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Duck Hunt" title="Duck Hunt" src="img/duckhunt.png" align="middle">Duck
-Hunt &nbsp; <img style="width: 50px; height: 50px;" alt="Dr. Mario" title="Dr. Mario" src="img/docmario.png" align="middle">Dr.
-Mario &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mario" title="Mario" src="img/mario.png" align="middle">Mario &nbsp; &nbsp;</td>
+<td><a name="wiifittrainer"></a><img style="width: 50px; height: 50px;" alt="Wii Fit Trainer" title="Let's STEP UP THE INTENSITY." src="img/intensity.png" align="middle">Wii Fit
+Trainer &nbsp;&nbsp;<a name="ryu"></a><img style="width: 50px; height: 50px;" alt="Ryu" title="HADOUKEN!" src="img/ryu.png" align="middle">Ryu &nbsp; &nbsp;<a name="duckhunt"></a><img style="width: 50px; height: 50px;" alt="Duck Hunt" title="Duck Hunt" src="img/duckhunt.png" align="middle">Duck
+Hunt &nbsp; <a name="drmario"></a><img style="width: 50px; height: 50px;" alt="Dr. Mario" title="Dr. Mario" src="img/docmario.png" align="middle">Dr.
+Mario &nbsp;&nbsp;<a name="mario"></a><img style="width: 50px; height: 50px;" alt="Mario" title="Mario" src="img/mario.png" align="middle">Mario &nbsp; &nbsp;</td>
 </tr>
 <tr>
 <td style="text-align: center;">B</td>
-<td> <img style="width: 50px; height: 50px;" alt="R.O.B." title="Any relation to beepboop.html?" src="img/robot.png" align="middle">R.O.B. &nbsp; <img style="width: 50px; height: 50px;" alt="Peach" title="I'm petch from Texas." src="img/petch.png" align="middle">Peach &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Bowser Jr." title="Bowser Jr." src="img/bowserjr.png" align="middle">Bowser
-Jr. &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph." src="img/moo2.png" align="middle">Mewtwo &nbsp; <img style="width: 50px; height: 50px;" alt="Greninja" title="Better nerf" src="img/greninja.png" align="middle">Greninja
+<td> <a name="rob"></a><img style="width: 50px; height: 50px;" alt="R.O.B." title="Any relation to beepboop.html?" src="img/robot.png" align="middle">R.O.B. &nbsp; <a name="peach"></a><img style="width: 50px; height: 50px;" alt="Peach" title="I'm petch from Texas." src="img/petch.png" align="middle">Peach &nbsp; &nbsp;<a name="bowserjr"></a><img style="width: 50px; height: 50px;" alt="Bowser Jr." title="Bowser Jr." src="img/bowserjr.png" align="middle">Bowser
+Jr. &nbsp;&nbsp;<a name="mewtwo"></a><img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph." src="img/moo2.png" align="middle">Mewtwo &nbsp; <a name="greninja"></a><img style="width: 50px; height: 50px;" alt="Greninja" title="Better nerf" src="img/greninja.png" align="middle">Greninja
 </td>
 </tr>
 <tr>
 <td style="text-align: center;">B-</td>
-<td> <img style="width: 50px; height: 50px;" alt="Pit" title="Pssh, Goddess's little pet." src="img/pit.png" align="middle">Pit &nbsp; <img style="width: 50px; height: 50px;" alt="Wario" title="*farts*" src="img/wah-rio.png" align="middle">Wario
-&nbsp; <img style="width: 50px; height: 50px;" alt="Samus" title="Side-B lag makes me cry" src="img/semos.png" align="middle">Samus &nbsp; <img style="width: 50px; height: 50px;" alt="Captain Falcon" title="FALCON... PAWWWNCH!" src="img/capfalcon.png" align="middle">Captain Falcon
-&nbsp; <img style="width: 50px; height: 50px;" alt="Game and Watch" title="Game and Watch" src="img/9.png" align="middle">Mr. Game and Watch
-&nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Dark Pit" title="Pitoo" src="img/darkpit.png" align="middle">Dark Pit &nbsp;</td>
+<td> <a name="pit"></a><img style="width: 50px; height: 50px;" alt="Pit" title="Pssh, Goddess's little pet." src="img/pit.png" align="middle">Pit &nbsp; <a name="wario"></a><img style="width: 50px; height: 50px;" alt="Wario" title="*farts*" src="img/wah-rio.png" align="middle">Wario
+&nbsp; <a name="samus"></a><img style="width: 50px; height: 50px;" alt="Samus" title="Side-B lag makes me cry" src="img/semos.png" align="middle">Samus &nbsp; <a name="captainfalcon"></a><img style="width: 50px; height: 50px;" alt="Captain Falcon" title="FALCON... PAWWWNCH!" src="img/capfalcon.png" align="middle">Captain Falcon
+&nbsp; <a name="mrgameandwatch"></a><img style="width: 50px; height: 50px;" alt="Game and Watch" title="Game and Watch" src="img/9.png" align="middle">Mr. Game and Watch
+&nbsp;&nbsp;<a name="darkpit"></a><img style="width: 50px; height: 50px;" alt="Dark Pit" title="Pitoo" src="img/darkpit.png" align="middle">Dark Pit &nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -130,20 +139,19 @@ Jr. &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph
 <tbody>
 <tr>
 <td style="text-align: center;">C+</td>
-<td> <img style="width: 50px; height: 50px;" alt="Pac-man" title="Om-frickin-nom." src="img/waka.png" align="middle">Pac-Man &nbsp; <img style="width: 50px; height: 50px;" alt="Shulk" title="You might think life would be a breeze..." src="img/feel.png" align="middle">Shulk &nbsp;
-&nbsp;<img style="width: 50px; height: 50px;" alt="Meta Knight" title="Know my power..." src="img/meta.png" align="middle">Meta Knight
-&nbsp; <img style="width: 50px; height: 50px;" alt="Kirby" title="HAI!" src="img/kirby.png" align="middle">Kirby &nbsp; <img style="width: 50px; height: 50px;" alt="Bowser" title="Bowser" src="img/bowser.png" align="middle">Bowser</td>
+<td> <a name="pacman"></a><img style="width: 50px; height: 50px;" alt="Pac-man" title="Om-frickin-nom." src="img/waka.png" align="middle">Pac-Man &nbsp; <a name="shulk"></a><img style="width: 50px; height: 50px;" alt="Shulk" title="You might think life would be a breeze..." src="img/feel.png" align="middle">Shulk &nbsp;
+&nbsp;<a name="metaknight"></a><img style="width: 50px; height: 50px;" alt="Meta Knight" title="Know my power..." src="img/meta.png" align="middle">Meta Knight
+&nbsp; <a name="kirby"></a><img style="width: 50px; height: 50px;" alt="Kirby" title="HAI!" src="img/kirby.png" align="middle">Kirby &nbsp; <a name="bowser"></a><img style="width: 50px; height: 50px;" alt="Bowser" title="Bowser" src="img/bowser.png" align="middle">Bowser</td>
 </tr>
 <tr>
 <td style="text-align: center;">C</td>
-<td><img style="width: 50px; height: 50px;" alt="Lucario" title="AURA" src="img/lucario.png" align="middle">Lucario &nbsp; <img style="width: 50px; height: 50px;" alt="Charizard" title="Charlizard" src="img/charizard.png" align="middle">Charizard
-&nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Megaman" title="SUPER FIGHTING ROBOT" src="img/megaman.png" align="middle">Megaman
-&nbsp; <img style="width: 50px; height: 50px;" alt="Zelda" title="*5 hour camera pan to Zelda's face*" src="img/zelda.png" align="middle">Zelda &nbsp; <img style="width: 50px; height: 50px;" alt="Roy" title="Pretty bad in FE6 btw" src="img/notmyboy.png" align="middle">Roy &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="DDD" title="D ayyy D ayyy D ayyy" src="img/ddd.png" align="middle">King DeDeDe</td>
+<td><a name="lucario"></a><img style="width: 50px; height: 50px;" alt="Lucario" title="AURA" src="img/lucario.png" align="middle">Lucario &nbsp; <a name="charizard"></a><img style="width: 50px; height: 50px;" alt="Charizard" title="Charlizard" src="img/charizard.png" align="middle">Charizard
+&nbsp; &nbsp;<a name="megaman"></a><img style="width: 50px; height: 50px;" alt="Megaman" title="SUPER FIGHTING ROBOT" src="img/megaman.png" align="middle">Megaman
+&nbsp; <a name="zelda"></a><img style="width: 50px; height: 50px;" alt="Zelda" title="*5 hour camera pan to Zelda's face*" src="img/zelda.png" align="middle">Zelda &nbsp; <a name="roy"></a><img style="width: 50px; height: 50px;" alt="Roy" title="Pretty bad in FE6 btw" src="img/notmyboy.png" align="middle">Roy &nbsp; &nbsp;<a name="kingdedede"></a><img style="width: 50px; height: 50px;" alt="DDD" title="D ayyy D ayyy D ayyy" src="img/ddd.png" align="middle">King DeDeDe &nbsp; &nbsp;<a name="robin"></a><img style="width: 50px; height: 50px;" alt="Robin" title="P.S. Also play as The Female!" src="img/rawhbin.png" align="middle">Robin</td>
 </tr>
 <tr>
 <td style="text-align: center;">C-</td>
-<td><img style="width: 50px; height: 50px;" alt="Robin" title="P.S. Also play as The Female!" src="img/rawhbin.png" align="middle">Robin &nbsp;
-<img style="width: 50px; height: 50px;" alt="Marth" title="&#20170;&#26085;&#12418;&#29983;&#12365;&#24310;&#12403;&#12427;&#12371;&#12392;&#12364;&#20986;&#26469;&#12383;&#12290;" src="img/marth.png" align="middle">Marth &nbsp; <img style="width: 50px; height: 50px;" alt="Lucina" title="tfw cross dressing as Marth" src="img/lucina.png" align="middle">Lucina<br>
+<td><a name="marth"></a><img style="width: 50px; height: 50px;" alt="Marth" title="&#20170;&#26085;&#12418;&#29983;&#12365;&#24310;&#12403;&#12427;&#12371;&#12392;&#12364;&#20986;&#26469;&#12383;&#12290;" src="img/marth.png" align="middle">Marth &nbsp; <a name="lucina"></a><img style="width: 50px; height: 50px;" alt="Lucina" title="tfw cross dressing as Marth" src="img/lucina.png" align="middle">Lucina<br>
 </td>
 </tr>
 </tbody>
@@ -157,17 +165,17 @@ Jr. &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph
 <tbody>
 <tr>
 <td style="text-align: center;">D+</td>
-<td><img style="width: 50px; height: 50px;" alt="Ike" title="I fight for my friends." src="img/ike.png" align="middle">Ike &nbsp;
-&nbsp;<img style="width: 50px; height: 50px;" comment="Rocket Jump is actually OP." alt="Palutena" title="10x better with customs" src="img/palutena.png" align="middle">Palutena &nbsp;</td>
+<td><a name="ike"></a><img style="width: 50px; height: 50px;" alt="Ike" title="I fight for my friends." src="img/ike.png" align="middle">Ike &nbsp;
+&nbsp;<a name="palutena"></a><img style="width: 50px; height: 50px;" comment="Rocket Jump is actually OP." alt="Palutena" title="10x better with customs" src="img/palutena.png" align="middle">Palutena &nbsp;</td>
 </tr>
 <tr>
 <td style="text-align: center;">D</td>
-<td> <img style="width: 50px; height: 50px;" alt="Little Mac" title="What is a Jolt Haymaker anyway?" src="img/mcd.png" align="middle">Little Mac
-&nbsp; <img style="width: 50px; height: 50px;" alt="Donkey Kong" title="EXPAND DONG" src="img/dong.png" align="middle">Donkey Kong &nbsp; &nbsp;</td>
+<td> <a name="ganondorf"></a><img style="width: 50px; height: 50px;" alt="Ganondorf" title="COME ON AND SLAM" src="img/slamandorf.png" align="middle">Ganondorf &nbsp; <a name="littlemac"></a><img style="width: 50px; height: 50px;" alt="Little Mac" title="What is a Jolt Haymaker anyway?" src="img/mcd.png" align="middle">Little Mac
+&nbsp; <a name="donkeykong"></a><img style="width: 50px; height: 50px;" alt="Donkey Kong" title="EXPAND DONG" src="img/dong.png" align="middle">Donkey Kong &nbsp; &nbsp;</td>
 </tr>
 <tr>
 <td style="text-align: center;">D-</td>
-<td><img style="width: 50px; height: 50px;" alt="Ganondorf" title="COME ON AND SLAM" src="img/slamandorf.png" align="middle">Ganondorf</td>
+<td><br></td>
 </tr>
 </tbody>
 </table>
@@ -175,7 +183,17 @@ Jr. &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph
 </tr>
 <tr>
 <th style="text-align: center; vertical-align: middle;"><button type="button" class="btn">N/A</button></th>
-<td><table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td><img style="width: 50px; height: 50px;" alt="Mii Brawler" src="img/wiibrawl.png" align="middle">Mii Brawler &nbsp;&nbsp; <img style="width: 50px; height: 50px;" alt="Mii Gunner" src="img/wiigun.png" align="middle">Mii Gunner &nbsp; &nbsp;<img style="width: 50px; height: 50px;" alt="Mii Swordfighter" src="img/wiistab.png" align="middle">Mii Swordfighter</td></tr></tbody></table></td>
+<td>
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td><a name="miibrawler"></a><img style="width: 50px; height: 50px;" alt="Mii Brawler" src="img/wiibrawl.png" align="middle">Mii Brawler
+&nbsp;&nbsp; <a name="miigunner"></a><img style="width: 50px; height: 50px;" alt="Mii Gunner" src="img/wiigun.png" align="middle">Mii Gunner
+&nbsp; &nbsp;<a name="miiswordfighter"></a><img style="width: 50px; height: 50px;" alt="Mii Swordfighter" src="img/wiistab.png" align="middle">Mii Swordfighter</td>
+</tr>
+</tbody>
+</table>
+</td>
 </tr>
 </tbody>
 </table>
@@ -185,5 +203,7 @@ Jr. &nbsp;&nbsp;<img style="width: 50px; height: 50px;" alt="Mewtwo" title="Hmph
 </small>
 <div style="text-align: center;"><small>Data
 collected from tournaments, For Glory, and my personal opinions. After
-all, this is MY tier list.<br>Disagree with something here? Why not discuss it with <a href="https://twitter.com/upbqueen" target="_blank">me on Twitter</a>?</small></div>
+all, this is MY tier list.<br>
+Disagree with something here? Why not discuss it with <a href="https://twitter.com/upbqueen" target="_blank">me
+on Twitter</a>?</small></div>
 </body></html>
