--- a/btc.html
+++ b/btc.html
@@ -1,53 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <meta http-equiv="cache-control" content="max-age=0">
+<html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<meta http-equiv="cache-control" content="max-age=0">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
-<meta http-equiv="pragma" content="no-cache">
-  <title>Donate To Your New Overlord!</title>
+<meta http-equiv="pragma" content="no-cache"><title>Donate To Your New Overlord!</title>
+
 </head>
+
 <body>
-
 <div class="container">
-  <h2>Bitcoin Donations</h2>
-  <p>Feel like donating to me? Lucky for you I accept donations via Bitcoin. Simply click the box below!<br><sup>Litecoin is also available, however, Bitcoin is suggested.</sup></p>            
-  <br><center><script src="http://coinwidget.com/widget/coin.js"></script>
-<script>
-CoinWidgetCom.go({
-	wallet_address: "14Mots61RHGqdDFb1LqApdhZQTvfcxAjNH"
-	, currency: "bitcoin"
-	, counter: "hide"
-	, alignment: "bc"
-	, qrcode: true
-	, auto_show: false
-	, lbl_button: "Donate"
-	, lbl_address: "My Bitcoin Address:"
-	, lbl_count: "donations"
-	, lbl_amount: "BTC"
-});
-</script><script src="http://coinwidget.com/widget/coin.js"></script>
-<script>
-CoinWidgetCom.go({
-	wallet_address: "LNamA5PqVwWtt1wkBUpU6emKcgHwjpFKJo"
-	, currency: "litecoin"
-	, counter: "hide"
-	, alignment: "bc"
-	, qrcode: true
-	, auto_show: false
-	, lbl_button: "Donate"
-	, lbl_address: "My Litecoin Address:"
-	, lbl_count: "donations"
-	, lbl_amount: "LTC"
-});
-</script></center><br>
-<sub>Please note this is for <b>donations only</b>. If you wish to send me Bitcoin/Litecoin for some other reason please contact me first.</sub>    
-</div>
-
-</body>
-</html>
+<h2>Bitcoin Donations</h2>
+<p>Feel like donating to me? Lucky for you I accept donations via
+Bitcoin.<br>
+<sup>Litecoin is temporarily down.</sup></p>
+<br>
+<center>
+Bitcoin Address:<br><img src="bta.jpg"><br>
+If you prefer to use Greenaddress, a Bitcoin URI, a QR Code, or use Trezor, click <a href="https://greenaddress.it/pay/GA7F9QduKPQtLRR7tVGzfBf9oGFjg/">here</a>.
+</center>
+<br>
+<sub>Please note this is for <b>donations only</b>.
+If you wish to send me Bitcoin/Litecoin for some other reason please
+contact me first.</sub> </div>
+</body></html>
