--- a/btc.html
+++ b/btc.html
@@ -16,15 +16,14 @@
 <div class="container">
 <h2>Bitcoin Donations</h2>
 <p>Feel like donating to me? Lucky for you I accept donations via
-Bitcoin.<br>
-<sup>Litecoin is temporarily down.</sup></p>
+Bitcoin, Litecoin, or Dogecoin!<br>
+<sup>Now accepting Dogecoin!</sup></p>
 <br>
 <center>
-Bitcoin Address:<br><img src="bta.jpg"><br>
-If you prefer to use Greenaddress, a Bitcoin URI, a QR Code, or use Trezor, click <a href="https://greenaddress.it/pay/GA7F9QduKPQtLRR7tVGzfBf9oGFjg/">here</a>.
+<br><img src="bta.jpg"><br>
 </center>
 <br>
 <sub>Please note this is for <b>donations only</b>.
-If you wish to send me Bitcoin/Litecoin for some other reason please
+If you wish to send me Bitcoin/Litecoin/Dogecoin for some other reason please
 contact me first.</sub> </div>
 </body></html>
